objects/ASI_CRM_Merchandizing__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_Customer__c</fullName>
        <label>Customer</label>
        <referenceTo>ASI_CRM_AccountsAdditionalField__c</referenceTo>
        <relationshipLabel>Merchandizings</relationshipLabel>
        <relationshipName>ASI_CRM_Customer_Merchandizing</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_DateTime__c</fullName>
        <label>DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Event</label>
        <referenceTo>ASI_MFM_Event__c</referenceTo>
        <relationshipLabel>Merchandizings</relationshipLabel>
        <relationshipName>ASI_CRM_Event_Merchandizing</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_MerchandizingDetails__c</fullName>
        <label>Merchandizing Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_MerchandizingStatus__c</fullName>
        <label>Merchandizing Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Broken</fullName>
                </value>
                <value>
                    <fullName>Light is not working</fullName>
                </value>
                <value>
                    <fullName>Lost</fullName>
                </value>
                <value>
                    <fullName>Color blur</fullName>
                </value>
                <value>
                    <fullName>Damage</fullName>
                </value>
                <value>
                    <fullName>Hidden</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_PGLeader__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PG Leader</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ASI_CRM_Merchandizings_PGLeader</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Promoter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Promoter</label>
        <referenceTo>ASI_CRM_Promoter__c</referenceTo>
        <relationshipLabel>Merchandizings</relationshipLabel>
        <relationshipName>ASI_CRM_Promoter_Merchandizing</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_StagingDateTime__c</fullName>
        <label>Staging DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SubmitDateTime__c</fullName>
        <label>Submit DateTime</label>
        <type>DateTime</type>
    </fields>
    <label>Merchandizing</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_VN_Merchandizings</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_MerchandizingDetails__c</columns>
        <columns>ASI_CRM_MerchandizingStatus__c</columns>
        <columns>ASI_CRM_Customer__c</columns>
        <columns>ASI_CRM_DateTime__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Merchandizing__c.ASI_CRM_VN_Merchandizing</value>
        </filters>
        <label>All VN Merchandizings</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_CRM_VN_all_User</group>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>MZ-{YY}{000000}</displayFormat>
        <label>Merchandizing No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Merchandizings</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_VN_Merchandizing</fullName>
        <active>true</active>
        <label>VN Merchandizing</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>